--- a/flex.html
+++ b/flex.html
@@ -13,6 +13,7 @@
       <div class="hijo">B</div>
       <div class="hijo">C</div>
       <div class="hijo otro">D</div>
+      <h1>hola</h1>
       <!-- <div class="hijo">E</div>
       <div class="hijo">F</div> -->
     </div>
