mi tercer commit

--- a/flex.html
+++ b/flex.html
@@ -14,6 +14,12 @@
       <div class="hijo">C</div>
       <div class="hijo otro">D</div>
       <h1>hola</h1>
+      <h2>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At ea quis
+        perspiciatis expedita eum soluta quasi placeat quos laborum, unde
+        voluptatem pariatur eligendi amet dolorem ratione tenetur. Veniam,
+        maiores esse!
+      </h2>
       <!-- <div class="hijo">E</div>
       <div class="hijo">F</div> -->
     </div>
